Fixed: #3769: Show whole Horizontal Scrollbar (#3813)

--- a/include/themes/classic/main.css
+++ b/include/themes/classic/main.css
@@ -771,7 +771,6 @@ ul#breadcrumbs {
 	width: 100%;
 	height: 100%;
 	vertical-align: top;
-	display: table;
 }
 
 .cactiTreeNavigationArea {
