--- a/include/themes/paw/main.css
+++ b/include/themes/paw/main.css
@@ -700,7 +700,6 @@ label {
 	clear: both;
 	width: 100%;
 	vertical-align: top;
-	display: table;
 }
 
 .cactiTreeNavigationArea {
